--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,16 @@
 /build
 /captures
 .externalNativeBuild
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
