--- a/multifilepicker/build.gradle
+++ b/multifilepicker/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.2  "
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -27,20 +27,22 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api 'com.android.support:appcompat-v7:26.1.0'
-    api 'com.android.support:design:26.1.0'
-    api 'com.android.support:cardview-v7:26.1.0'
+    api 'com.android.support:appcompat-v7:27.0.2'
+    api 'com.android.support:design:27.0.2'
+    api 'com.android.support:cardview-v7:27.0.2'
     implementation 'net.igenius:customcheckbox:1.3'
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 }
 
 group = 'com.github.rzilyn'
-version = '1.0'
+version = '1.0.2'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -116,9 +118,9 @@ bintray {
         name = 'com.github.rzilyn.multifilepicker'
         userOrg = 'rzilyn'
         version {
-            name = '1.0-tuts'
-            released  = new Date()
-            vcsTag = '1.0'
+            name = '1.0.1-tuts'
+            released = new Date()
+            vcsTag = '1.0.1'
         }
 
         licenses = ['Apache-2.0']
