--- a/multifilepicker/src/main/AndroidManifest.xml
+++ b/multifilepicker/src/main/AndroidManifest.xml
@@ -3,11 +3,14 @@
     package="com.github.rzilyn.multifilepicker">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera2.full" />
 
     <application>
-        <activity android:name=".BaseActivity" />
         <activity
             android:name=".FilePickerActivity"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
